@@ -1299,6 +1299,8 @@ James Van Vleet
 
 Simon Walls
    * Netcam Keepalive and HTTP/1.1 http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x01x22x231542 
+   * Better debug in netcam for "Error reading image header" 
+     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x02x27x092849 (Simon Walls)
 
 Sean Watkins
    * Created a centralized logging function that became event()
